--- a/style.css
+++ b/style.css
@@ -28,13 +28,17 @@ body {
 /* main classes */
 main {
     background-color: lightgrey;
-
+    height: 100vw;
+    position: relative;
 }
 .contenitore {
     background-color: lightgrey;
     width: 80%;
     margin: auto;
     margin-top: 100px;
+    position: absolute;
+    left: 0;
+    right: 0;
 }
 
 .navigazione {
