--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ main {
     color: lightgrey;
 }
 
-/* Informazioni */
+/* Informazioni per checkbox*/
 .informazioni {
     background-color: white;
     padding: 20px 40px;
